[package]
name = "futures-select-n"
version = "0.1.0"
authors = ["Ted Mielczarek <ted@fullstory.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.24"
futures = "0.3.3"
paste = "0.1.6"

[dev-dependencies]
async-std = { version = "1.5.0", features = ["attributes"] }
